fix(ui): fix long content overflow

--- a/css/includes/components/_richtext.scss
+++ b/css/includes/components/_richtext.scss
@@ -55,6 +55,8 @@ body.mce-content-body {
 
 .rich_text_container {
     white-space: initial;
+    overflow-x: scroll;
+    padding-bottom: 10px;
 
     thead,
     tbody,
